header align fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -183,6 +183,10 @@
 @media screen and (max-width: 768px) {
 
     /*--------------------------------------------header*/
+    .header-box {
+        margin-inline: 10px;
+    }
+
     .sign-user {
         margin-left: 0;
         width: 100%;
@@ -290,6 +294,7 @@
 
     .column-content {
         width: 100%;
+        font-size: 12px;
     }
 
     /*------------------------------------------------- footer*/
